[package]
name = "uu"
version = "0.1.0"
authors = ["Yang Keao <keao.yang@yahoo.com>"]
edition = "2018"

[dependencies]
xcb = "0.8"
log = "0.4"
env_logger = "0.6.0"
pango = "0.5.0"
pangocairo = "0.6.0"

[dependencies.cairo-rs]
version = "0.5.0"
features = ["xcb"]

[dependencies.cairo-sys-rs]
version = "0.7.0"
features = ["xcb"]
